--- a/format.css
+++ b/format.css
@@ -13,7 +13,7 @@ head, body
 }
 /* All ordered and unordered lists go under the "list" class. I put descriptive lists into their own class because they are more like paragraphs than lists, so I formatted them differently. */
 
-.descriptivelist
+.dlist
 {
     text-align : left;
    	font-size: 13pt;
@@ -31,15 +31,56 @@ dd
 {
    margin-bottom: 15pt;
 }
-/* I wanted the descriptive lists to appear like text, with headings and words. */
+/* I wanted the descriptive lists to appear like the website text rather then a separate list. */
 
-.caption
+#validator
+{
+   margin-top: 30pt;
+}
+
+/* I just need some space between the sources paragraph and validator image. */
+
+#longcaption
 {
 	color: grey;
 	text-align : left;
  	font-size: 11pt;
    	line-height: 12pt;
-    margin-top: 2px;
+	margin-top: 2px;
+	margin-right: 35%;
+}
+
+.caption
+{
+	color: grey;
+	text-align : center;
+ 	font-size: 11pt;
+   	line-height: 12pt;
+	margin-top: 2px;
+}
+
+#longimg
+{
+    float: right;
+	margin-right: 3%
+}
+/* This image is very long, so I made it float alongside the text. The other images are too square to float alongside the text, making this id unique for this image. The caption is also unique, because I wanted it to fit in with the text. I placed a margin on the right so the caption and image would not touch.*/
+
+#fatimg
+{
+    margin-left: 20%;
+}
+/* This image is very wide, so it requires a different margin than the other images to appear centered. This makes the id unique for the image. */
+
+#wideimg
+{
+    margin-left: 25%;
+}
+/* While not as wide as the other image, this image is wider than normal; so it requires a different margin than the other images to appear centered. This makes the id unique for the image. */
+
+.img
+{
+    margin-left: 30%;
 }
 
 h1
